# Y

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: linting.yml  pylint.yml  pyright.yml
db/: y.db
static/: style.css
templates/: base.html  create_post.html  edit_profile.html  error.html  header.html  index.html  login.html  post_with_comments.html  posts.html  profile.html  signup.html
typings/: flask_login.pyi
typings/flask_wtf/: __init__.pyi  _compat.pyi  csrf.pyi  file.pyi  form.pyi  i18n.pyi
typings/flask_wtf/recaptcha/: __init__.pyi  fields.pyi  validators.pyi  widgets.pyi
typings/wtforms/: __init__.pyi  form.pyi  i18n.pyi  meta.pyi  utils.pyi  validators.pyi
typings/wtforms/fields/: __init__.pyi  choices.pyi  core.pyi  datetime.pyi  form.pyi  list.pyi  numeric.pyi  simple.pyi
typings/wtforms/widgets/: __init__.pyi  core.pyi
y/: __main__.py  app.py  cli.py  config.py  database.py  form_fields.py  forms.py  utils.py  y.py
y/data/: db_session.py  post.py  user.py  y.db
y/database/: __all_models.py  database.py  db_session.py  post.py  user.py
y/db/: y.db
