[tool.poetry]
name = "y"
version = "0.2.0"
description = ""
authors = ["Vlad <89295404+Virashu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
sqlalchemy = "^2.0.29"
wtforms = "^3.1.2"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"

[tool.poetry.scripts]
start = "y.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]

[tool.pyright]
typeCheckingMode = "strict"
analyzeUnannotatedFunctions = true
reportImplicitOverride = true
reportDeprecated = true
reportAny = false
stubPath = "./typings"
